Moving html into the java simulation app.

--- a/SmartTraffic/web/simulation.html
+++ b/SmartTraffic/web/simulation.html
@@ -16,14 +16,14 @@
     <div class="col-sm-6">
         <div>
             Number of cars: 1
-            <img id="trafficLight1" class="trafficLight" alt="Red" src="resources/traffic_light_red.svg"/>
+            <img id="trafficLight1" class="trafficLight" alt="Red" src="../../resources/traffic_light_red.svg"/>
         </div>
     </div>
 </div>
 <div class="row">
     <div class="col-sm-offset-6 col-sm-6">
         Number of cars: 1
-        <img id="trafficLight2" class="trafficLight" alt="Red" src="resources/traffic_light_red.svg"/>
+        <img id="trafficLight2" class="trafficLight" alt="Red" src="../../resources/traffic_light_red.svg"/>
     </div>
 </div>
 
